# news-category-classification

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: PRD.md  architecture.md  decisions.md  demo-runbook.md  implementation-plan.md  progress.md  rehearsal-1-notes.md  rehearsal-2-notes.md  report.docx  report.md  slides.pptx  submission-checklist.md
notebooks/: 00_main.ipynb  01_eda.ipynb
reports/: model_comparison.csv
src/: __init__.py  preprocessing.py
tests/: test_preprocessing.py  test_smoke.py
