[project]
name = "news-category-classification"
version = "0.0.1"
description = "Multi-class news category classification (42 classes) with classical ML + RoBERTa + Groq LLM."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks/*.ipynb", ".ipynb_checkpoints/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — formatter handles where reasonable
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
